# gad

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.circleci/: config.yml
.github/workflows/: rust.yml
gad/: Cargo.toml  README.md  README.tpl
gad/src/: analytic.rs  arith.rs  array.rs  arrayfire.rs  const_arith.rs  error.rs  graph.rs  lib.rs  linked.rs  net.rs  net_ext.rs  store.rs
gad/tests/: arith.rs  array_compare.rs  compare.rs  core.rs  extension.rs  matrix.rs  net.rs  symbolic.rs
src/: array_compare.rs  compare.rs  core.rs  matrix.rs
tests/: analytic.rs  array.rs  const_arith.rs  graph.rs
