[package]
name = "gad"
version = "0.1.0"
description = "Generic automatic differentiation for Rust"
repository = "https://github.com/facebookresearch/gad"
authors = ["Mathieu Baudet <mathieubaudet@fb.com>", "Jacob Kahn <jacobkahn@fb.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"
exclude = [
    # Readme template that doesn't need to be included.
    "README.tpl",
]

[features]
default = ["arrayfire"]

[dependencies]
thiserror = "1.0"
id-arena = "2.2.1"
num = { version = "0.4.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
backtrace = { version = "0.3" }
arrayfire = { version = "3.8.0", features = ["afserde"], optional = true }

[dev-dependencies]
bincode = "1.3.1"
anyhow = "1.0"
